# MLDS6_Project_T10

./: .gitignore  Dockerfile  app.py  data.dvc  driveID.txt  pyproject.toml  requirements.txt
.dvc/: config
docs/acceptance/: exit_report.md
docs/data/: data_definition.md  data_dictionary.md  data_summary.md
docs/deployment/: deploymentdoc.md
docs/modeling/: baseline_models.md  model_report.md
scripts/: EDA.ipynb  Modeling.ipynb  additional.ipynb  data_acquisition.ipynb  model_versioning.ipynb  preprocessing.ipynb
src/MLDS6_Assets/database/: DVCVersioning.py  __init__.py  filesManager.py
src/MLDS6_Assets/models/: __init__.py  callbacks.py  dataload.py  models.py  results.py  split.py  training.py
src/MLDS6_Assets/preprocessing/: __init__.py  dataExploration.py  dataTransformation.py  sampling.py
src/MLDS6_Assets/visualization/: __init__.py  folders.py
