[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "Pneumonia diagnoser"
version = "0.1.0"
authors = [
    {name = "David Fernando Adames Rondón", email = "dadames@unal.edu.co"},
    {name = "Reinaldo Toledo Leguizamón", email = "rtoledol@unal.edu.co"},
    {name = "Omar David Toledo Leguizamón", email = "otoledo@unal.edu.co"}
]
description = "Image classifier for the detection of infectious respiratory diseases in pulmonary radiographs"
requires-python = ">3.11"
dependencies = [
    "absl-py==2.1.0",
    "aiohappyeyeballs==2.4.4",
    "aiohttp==3.11.10",
    "aiohttp-retry==2.9.1",
    "aiosignal==1.3.1",
    "alembic==1.14.0",
    "altair==5.5.0",
    "amqp==5.3.1",
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.9.3",
    "appdirs==1.4.4",
    "asttokens==2.4.1",
    "astunparse==1.6.3",
    "asyncssh==2.18.0",
    "atpublic==5.0",
    "attrs==24.2.0",
    "billiard==4.2.1",
    "bleach==6.2.0",
    "blinker==1.9.0",
    "cachetools==5.5.0",
    "celery==5.4.0",
    "certifi==2024.8.30",
    "cffi==1.17.1",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1",
    "click-repl==0.3.0",
    "cloudpickle==3.1.0",
    "colorama==0.4.6",
    "comm==0.2.2",
    "configobj==5.0.9",
    "contourpy==1.3.1",
    "cryptography==43.0.3",
    "cycler==0.12.1",
    "databricks-sdk==0.39.0",
    "debugpy==1.8.9",
    "decorator==5.1.1",
    "Deprecated==1.2.15",
    "dictdiffer==0.9.0",
    "diskcache==5.6.3",
    "distro==1.9.0",
    "docker==7.1.0",
    "dpath==2.2.0",
    "dulwich==0.22.6",
    "dvc==3.58.0",
    "dvc-data==3.16.7",
    "dvc-gdrive==3.0.1",
    "dvc-http==2.32.0",
    "dvc-objects==5.1.0",
    "dvc-render==1.0.2",
    "dvc-studio-client==0.21.0",
    "dvc-task==0.40.2",
    "entrypoints==0.4",
    "executing==2.1.0",
    "filelock==3.16.1",
    "Flask==3.1.0",
    "flatbuffers==24.3.25",
    "flatten-dict==0.4.2",
    "flufl.lock==8.1.0",
    "fonttools==4.55.0",
    "frozenlist==1.5.0",
    "fsspec==2024.10.0",
    "funcy==2.0",
    "gast==0.6.0",
    "gitdb==4.0.11",
    "GitPython==3.1.43",
    "google-api-core==2.23.0",
    "google-api-python-client==2.154.0",
    "google-auth==2.36.0",
    "google-auth-httplib2==0.2.0",
    "google-pasta==0.2.0",
    "googleapis-common-protos==1.66.0",
    "grandalf==0.8",
    "graphene==3.4.3",
    "graphql-core==3.2.5",
    "graphql-relay==3.2.0",
    "greenlet==3.1.1",
    "grpcio==1.68.0",
    "gto==1.7.2",
    "h5py==3.12.1",
    "httplib2==0.22.0",
    "hydra-core==1.3.2",
    "idna==3.10",
    "importlib_metadata==8.5.0",
    "ipykernel==6.29.5",
    "ipython==8.29.0",
    "iterative-telemetry==0.0.9",
    "itsdangerous==2.2.0",
    "jedi==0.19.2",
    "Jinja2==3.1.4",
    "joblib==1.4.2",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "jupyter_client==8.6.3",
    "jupyter_core==5.7.2",
    "kaggle==1.6.17",
    "keras==3.6.0",
    "keras-tuner==1.4.7",
    "kiwisolver==1.4.7",
    "kombu==5.4.2",
    "kt-legacy==1.0.5",
    "libclang==18.1.1",
    "Mako==1.3.8",
    "Markdown==3.7",
    "markdown-it-py==3.0.0",
    "MarkupSafe==3.0.2",
    "matplotlib==3.9.2",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "ml-dtypes==0.4.1",
    "mlflow==2.19.0",
    "mlflow-skinny==2.19.0",
    "multidict==6.1.0",
    "namex==0.0.8",
    "narwhals==1.19.0",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "numpy==2.0.2",
    "oauth2client==4.1.3",
    "omegaconf==2.3.0",
    "opencv-python==4.10.0.84",
    "opentelemetry-api==1.29.0",
    "opentelemetry-sdk==1.29.0",
    "opentelemetry-semantic-conventions==0.50b0",
    "opt_einsum==3.4.0",
    "optree==0.13.1",
    "orjson==3.10.12",
    "packaging==24.2",
    "pandas==2.2.3",
    "parso==0.8.4",
    "pathspec==0.12.1",
    "pillow==11.0.0",
    "platformdirs==4.3.6",
    "prompt_toolkit==3.0.48",
    "propcache==0.2.1",
    "proto-plus==1.25.0",
    "protobuf==5.28.3",
    "psutil==6.1.0",
    "pure_eval==0.2.3",
    "pyarrow==18.1.0",
    "pyasn1==0.6.1",
    "pyasn1_modules==0.4.1",
    "pycparser==2.22",
    "pydantic==2.10.3",
    "pydantic_core==2.27.1",
    "pydeck==0.9.1",
    "pydot==3.0.3",
    "PyDrive2==1.21.3",
    "pygit2==1.16.0",
    "Pygments==2.18.0",
    "pygtrie==2.5.0",
    "pyOpenSSL==24.2.1",
    "pyparsing==3.2.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-slugify==8.0.4",
    "pytz==2024.2",
    "PyYAML==6.0.2",
    "pyzmq==26.2.0",
    "referencing==0.35.1",
    "requests==2.32.3",
    "rich==13.9.4",
    "rpds-py==0.22.3",
    "rsa==4.9",
    "ruamel.yaml==0.18.6",
    "ruamel.yaml.clib==0.2.12",
    "scikit-learn==1.6.0",
    "scipy==1.14.1",
    "scmrepo==3.3.9",
    "seaborn==0.13.2",
    "semver==3.0.2",
    "setuptools==75.6.0",
    "shellingham==1.5.4",
    "shortuuid==1.0.13",
    "shtab==1.7.1",
    "six==1.16.0",
    "smmap==5.0.1",
    "SQLAlchemy==2.0.36",
    "sqlparse==0.5.3",
    "sqltrie==0.11.1",
    "stack-data==0.6.3",
    "streamlit==1.41.1",
    "tabulate==0.9.0",
    "tenacity==9.0.0",
    "tensorboard==2.18.0",
    "tensorboard-data-server==0.7.2",
    "tensorflow==2.18.0",
    "termcolor==2.5.0",
    "text-unidecode==1.3",
    "threadpoolctl==3.5.0",
    "toml==0.10.2",
    "tomlkit==0.13.2",
    "tornado==6.4.2",
    "tqdm==4.67.0",
    "traitlets==5.14.3",
    "typer==0.15.1",
    "typing_extensions==4.12.2",
    "tzdata==2024.2",
    "uritemplate==4.1.1",
    "urllib3==2.2.3",
    "vine==5.1.0",
    "voluptuous==0.15.2",
    "waitress==3.0.2",
    "watchdog==6.0.0",
    "wcwidth==0.2.13",
    "webencodings==0.5.1",
    "Werkzeug==3.1.3",
    "wheel==0.45.1",
    "wrapt==1.17.0",
    "yarl==1.18.3",
    "zc.lockfile==3.0.post1",
    "zipp==3.21.0"
]

[tool.setuptools.packages.find]
where = ["src/"]
